--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/KyleAMathews/react-headroom/issues"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "prop-types": "^15.5.8",
     "raf": "^3.3.0",
     "shallowequal": "^0.2.2"
